--- a/module1/index.html
+++ b/module1/index.html
@@ -22,9 +22,11 @@
 <body>
 
   <header class="header">
+<!--    TODO: лишняя вложенность дополнительных div-->
     <div class="container">
       <div class="header-top">
         <a href="" class="logo">
+<!--TODO: атрибут alt должен быть заполнен          -->
           <img src="img/logo.svg" alt="" class="logo__img">
         </a>
         <nav class="menu">
@@ -46,18 +48,21 @@
       </div>
     </div>
   </header>
-  
+
   <section class="bank" id="bank">
+<!--    TODO: лишняя вложенность-->
     <div class="container">
       <div class="bank__inner">
+        <!--TODO: атрибут alt должен быть заполнен          -->
         <img src="img/back-bg.svg" alt="" class="bank__img">
         <div class="bank__box">
           <h2 class="bank__title">
+<!--            TODO: тег <br> - плохой тон. если сильно надо, лучше сделать span'ами -->
             We are a <br> high-level data <br> storage bank
           </h2>
           <p class="bank__desc">
-            The place to store various data that you can access at any time through the internet  and where you can carry it. 
-            This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse. 
+            The place to store various data that you can access at any time through the internet  and where you can carry it.
+            This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse.
           </p>
         </div>
       </div>
@@ -65,6 +70,7 @@
   </section>
 
   <section class="features" id="features">
+    <!--    TODO: лишняя вложенность-->
     <div class="container">
       <h2 class="features__title">Features</h2>
       <div class="features__subtitle">
@@ -72,7 +78,9 @@
       </div>
 
       <div class="features__items">
+<!--        TODO: инлайновые стили - антипаттерн. перегружают верстку, плохая читаемость, сложность поддержки-->
         <div class="features__item" style="background-image: url('./img/features-bg-1.svg');">
+          <!--TODO: атрибут alt должен быть заполнен          -->
           <img src="img/features-1.svg" alt="" class="features__img">
           <div class="features__wrap">
             <h3 class="features__heading">Search Data</h3>
@@ -83,8 +91,9 @@
             <a href="#" class="features__link">Learn more</a>
           </div>
         </div>
-
+        <!--        TODO: инлайновые стили - антипаттерн. перегружают верстку, плохая читаемость, сложность поддержки-->
         <div class="features__item" style="background-image: url('./img/features-bg-2.svg');">
+          <!--TODO: атрибут alt должен быть заполнен          -->
           <img src="img/features-2.svg" alt="" class="features__img">
           <div class="features__wrap">
             <h3 class="features__heading">Search Data</h3>
@@ -95,8 +104,9 @@
             <a href="#" class="features__link">Learn more</a>
           </div>
         </div>
-
+        <!--        TODO: инлайновые стили - антипаттерн. перегружают верстку, плохая читаемость, сложность поддержки-->
         <div class="features__item" style="background-image: url('./img/features-bg-3.svg');">
+          <!--TODO: атрибут alt должен быть заполнен          -->
           <img src="img/features-3.svg" alt="" class="features__img">
           <div class="features__wrap">
             <h3 class="features__heading">Search Data</h3>
@@ -107,8 +117,9 @@
             <a href="#" class="features__link">Learn more</a>
           </div>
         </div>
-
+        <!--        TODO: инлайновые стили - антипаттерн. перегружают верстку, плохая читаемость, сложность поддержки-->
         <div class="features__item" style="background-image: url('./img/features-bg-4.svg');">
+          <!--TODO: атрибут alt должен быть заполнен          -->
           <img src="img/features-4.svg" alt="" class="features__img">
           <div class="features__wrap">
             <h3 class="features__heading">Search Data</h3>
@@ -126,23 +137,26 @@
 
   <section class="testimonials">
     <div class="container">
-      <div class="testimonials__wrap">    
+      <div class="testimonials__wrap">
+<!--        TODO: дублирование h1 на странице-->
         <h1 class="testimonials__title">Testimonials</h1>
         <div class="slider">
 
           <div class="slid">
+            <!--TODO: атрибут alt должен быть заполнен          -->
             <img src="img/user-1.jpg" alt="" class="slid__img">
             <div class="slid__block">
               <div class="slid__name">John Fang</div>
               <div class="slid__profession">wordfaang.com</div>
               <p class="slid__info">
-                Suspendisse ultrices at diam lectus nullam. 
+                Suspendisse ultrices at diam lectus nullam.
                 Nisl, sagittis viverra enim erat tortor ultricies
                 massa turpis. Arcu pulvinar aenean nam laoreet
                 nulla.
               </p>
             </div>
           </div>
+<!--          TODO: нельзя оставлять мусор в итоговой верстке. что не используется - удаляется-->
           <!-- <div class="slid">
             <img src="img/user-2.jpg" alt="" class="slid__img">
             <div class="slid__block">
@@ -160,7 +174,7 @@
               <div class="slid__name">William</div>
               <div class="slid__profession">Web Designer</div>
               <p class="slid__info">
-                Suspendisse ultrices at diam lectus nullam. 
+                Suspendisse ultrices at diam lectus nullam.
                 Nisl, sagittis viverra enim erat tortor
               </p>
             </div>
@@ -187,11 +201,11 @@
   <footer class="footer" id="footer">
     <div class="container">
       <div class="footer__inner">
-       
+
         <div class="footer__block">
           <a href="#" class="footer__logo">
             <img src="img/footer-logo.svg" class="footer__logo-img" alt="">
-          </a>  
+          </a>
           <span class="footer__address">
             Warehouse Society, 234 <br/> Bahagia Ave Street PRBW 29281
           </span>
@@ -221,7 +235,7 @@
       </div>
     </div>
   </footer>
-  
+
   <script src="js/main.js"></script>
 </body>
 </html>
